# sdioexperiment

./: .gitignore  CMakeLists.txt
HAL/: CMakeLists.txt
HAL/STM32F1/HAL_Inc/: stm32f1xx_hal_sd.h  stm32f1xx_ll_sdmmc.h
HAL/STM32F1/HAL_Src/: stm32f1xx_hal_sd.c  stm32f1xx_ll_sdmmc.c
Src/: BoardInit.cpp  BoardInit.h  CMakeLists.txt  DumpFunctions.cpp  DumpFunctions.h  IDriver.h  SDCard.cpp  SDCard.h  SDIODriver.cpp  SDIODriver.h  SDIOExperiment.cpp  SPIDriver.cpp  SPIDriver.h  UartUtils.cpp  UartUtils.h
Tests/: dump_meta.py  measure_init_timings.py  protocol.py  run.bat  test_connection.py
cmake/: README.md  gcc_stm32f1.cmake
